# Hierarchical-Bayes-Compiler

./: Blanket.hs  Code.hs  CodeOpt.hs  Conjugacy.hs  Core.hs  Data.hs  Decl.hs  Devectorize.hs  Gen.hs  GenC.hs  GenMatlab.hs  HMM.hier  IBMmodel1.hier  Import.hs  LDA-HMM.hier  LDA4d.hier  Lift.hs  Main.hs  Marginalize.hs  Math.hs  MkCore.hs  Parse.hs  README  Reindex.hs  Simulate.hs  Stats.hs  TestLDA.hs  Translate.hs  Type.hs  UnLift.hs  Util.hs  X  hbc.cabal  mix_gauss.hier  schools.data  testW  testW4
examples/: LDA-eval.hier  LDA.hier  linreg1d.hier  mix_gauss_py.hier  mix_mult_py.hier  regX1d  regY1d  samplib.c  samplib.h  schools.hier  stats.c  stats.h
src/: Main.hs
src/HBC/: Blanket.hs  Code.hs  CodeOpt.hs  Conjugacy.hs  Core.hs  Data.hs  Decl.hs  Devectorize.hs  Gen.hs  GenC.hs  GenMatlab.hs  Import.hs  Lift.hs  Marginalize.hs  Math.hs  MkCore.hs  Parse.hs  Reindex.hs  Simulate.hs  Stats.hs  TestLDA.hs  Translate.hs  Type.hs  UnLift.hs  Util.hs
