Name:               hbc
Version:            0.7.1
Synopsis:           Hierarchical Bayes Compiler
Description:        HBC is a toolkit for implementing hierarchical Bayesian models. 
Category:           Statistics, Natural Language Processing
Author:             Hal Daume III
Build-Type:         Simple
Cabal-Version:      >= 1.6

Extra-Source-Files: README
                    examples/english  
                    examples/HMM.hier
                    examples/LDA4d.hier
                    examples/LDA.hier      
                    examples/linreg1d.hier
                    examples/mix_gauss_py.hier
                    examples/regX1d
                    examples/schools.data
                    examples/testW
                    examples/X
                    examples/french
                    examples/IBMmodel1.hier
                    examples/LDA-eval.hier
                    examples/LDA-HMM.hier
                    examples/mix_gauss.hier
                    examples/mix_mult_py.hier
                    examples/regY1d
                    examples/schools.hier
                    examples/testW4
                    clibs/stats.c
                    clibs/stats.h
                    clibs/samplib.c
                    clibs/samplib.h

License:            PublicDomain

Source-Repository head
    Type:         git
    Location:     http://github.com/srush/Hierarchical-Bayes-Compiler.git

executable hbc 
        Build-Depends:     base >= 4 && < 5,
                           containers,
                           array,
                           parsec > 1 && < 3,   
                           mtl,            
                           random,
                           syb,
                           process
        main-is:           Main.hs

        ghc-options:       -O2
        hs-source-dirs:    src

        Other-Modules:     HBC.Blanket
                           HBC.Conjugacy
                           HBC.Code
                           HBC.CodeOpt
                           HBC.Core
                           HBC.Data
                           HBC.Devectorize
                           HBC.Decl
                           HBC.Gen
                           HBC.GenC
                           HBC.GenMatlab
                           HBC.Lift
                           HBC.Import
                           HBC.Marginalize
                           HBC.MkCore
                           HBC.Parse
                           HBC.Reindex
                           HBC.Simulate
                           HBC.Stats
                           HBC.TestLDA
                           HBC.Translate
                           HBC.Type
                           HBC.UnLift
                           HBC.Util
                           



